--- a/index.html
+++ b/index.html
@@ -26,33 +26,48 @@
 
 	<body class="container">
 		<!-- Navbar (sit on top) -->
-		<div class="container-nav">
+		<!--
+		<nav class="container-nav">
 			<div class="container-nav-sub--left">
-				<a href="#home" class="logo">
+				<a href="#home" class="container-nav-sub--left logo">
 					<b>J&M</b>&nbsp General Contractors
 				</a>
 			</div>
-			<!-- Float links to the right. Hide them on small screens -->
+			
 			<div class="container-nav-sub--right">
-				<i class="fas fa-bars"></i>
+				<div class="hamburger">
+					<i class="fas fa-bars"></i>
+				</div>
 				<a href="#projects" class="link"> Gallery </a>
 				<a href="#about" class="link"> About </a>
 				<a href="#contact" class="link"> Contact </a>
 				<a href="#services" class="link"> Services </a>
 				<a href="#contact" class="link"> Testimonial </a>
-			</div>
-		</div>
+			</div> -->
+		<header class="header">
+			<h1 class="logo">J&M</h1>
+			<input
+				type="checkbox"
+				id="nav-toggle"
+				class="nav-toggle"
+			/>
+			<nav class="nav">
+				<ul>
+					<li><a href="#">Home</a></li>
+					<li><a href="#services">Services</a></li>
+					<li><a href="#gallery">Gallery</a></li>
+					<li><a href="#contact">Contact</a></li>
+					<li><a href="#about">About</a></li>
+					<li><a href="#testimonial">Testimonial</a></li>
+				</ul>
+			</nav>
+			<label for="nav-toggle" class="nav-toggle-label">
+				<span></span>
+			</label>
+		</header>
+
 		<!-- style="max-width: 1500px"  Header -->
 		<header class="container-header" id="home">
-			<!--
-			<img
-				class="container-header-hero--img"
-				src="img/residential-big.jpg"
-				alt="Contractor-img"
-				width="1500"
-				height="800"
-			/>
-		-->
 			<div class="container-header-hero">
 				<h1 class="container-header-hero--main">
 					<span class="hero-main"><b>J&M</b></span>
@@ -61,211 +76,258 @@
 			</div>
 		</header>
 
-		<!-- Page content -->
-		<div class="container-services" id="services">
-			<div class="multi-column-container">
-				<h2>
-					<strong>Commercial Construction Services</strong>
-				</h2>
-				<ul class="multi-column-container--items">
-					<li>Restroom remodeling, upgrades & additions</li>
-					<li>Interior & Exterior Painting</li>
-					<li>Interior & Exterior Lighting & Electrical</li>
-					<li>Framing & Drywall</li>
-					<li>Demolition</li>
-				</ul>
-				<ul class="multi-column-container--items">
-					<li>Move In/Out Renovations</li>
-					<li>Tenant Improvements</li>
-					<li>Office Additions</li>
-					<li>Flooring Installation</li>
-				</ul>
-			</div>
-			<div class="multi-column-container">
-				<h2>
-					<strong>Residential Construction Services</strong>
-				</h2>
-				<ul class="multi-column-container--items">
-					<li>Whole Home Remodels</li>
-					<li>Bathroom/Kitchen Remodel or Upgrade</li>
-					<li>Stucco Repair</li>
-					<li>Exterior Gates/Fencing</li>
-				</ul>
-				<ul class="multi-column-container--items">
-					<li>Flooring Installation</li>
-					<li>Countertop/Tile Installation</li>
-					<li>Demolition</li>
-					<li>Interior & Exterior Painting</li>
-				</ul>
+		<!-- Service cards -->
+
+		<section class="card-container">
+			<div class="card">
+				<div class="card__side card__side--front">
+					<div class="card__picture card__picture--1">
+						&nbsp;
+					</div>
+					<h4 class="card__heading">
+						<span
+							class="card__heading-span card__heading-span--1"
+							>Residential Construction Services</span
+						>
+					</h4>
+					<div class="card__details">
+						<ul>
+							<li>Whole Home Remodels</li>
+							<li>Bathroom/Kitchen Remodel or Upgrade</li>
+							<li>Stucco Repair</li>
+							<li>Exterior Gates/Fencing</li>
+							<li>Flooring Installation</li>
+							<li>Countertop/Tile Installation</li>
+							<li>Demolition</li>
+							<li>Interior & Exterior Painting</li>
+						</ul>
+					</div>
+				</div>
 			</div>
 
-			<div class="multi-column-container">
-				<h2>
-					<strong
-						>Commercial & Residential Electrical
-						Services</strong
-					>
-				</h2>
-				<ul class="multi-column-container--items">
-					<li>
-						Electrical Panel Upgrades & Installations
+			<!-- Seconds card -->
+			<div class="card">
+				<div class="card__side card__side--front">
+					<div class="card__picture card__picture--2">
+						&nbsp;
+					</div>
+					<h4 class="card__heading">
+						<span
+							class="card__heading-span card__heading-span--2"
+							>Commercial Construction Services</span
+						>
+					</h4>
+					<div class="card__details">
 						<ul>
-							3 phase (Commercial/Industrial)
+							<li>Restroom remodeling, upgrades & additions</li>
+							<li>Interior & Exterior Painting</li>
+							<li>Interior & Exterior Lighting & Electrical</li>
+							<li>Framing & Drywall</li>
+							<li>Move In/Out Renovations</li>
+							<li>Tenant Improvements</li>
+							<li>Office Additions</li>
+							<li>Flooring Installation</li>
+							<li>Demolition</li>
 						</ul>
+					</div>
+				</div>
+				
+			</div>
+
+			<!-- 3rd card -->
+			<div class="card">
+				<div class="card__side card__side--upper">
+					<div class="card__picture card__picture--3">
+						&nbsp;
+					</div>
+					<h4 class="card__heading">
+						<span class="card__heading-span card__heading-span--3">Commercial & Residential Electrical Services</span>
+					</h4>
+					<div class="card__details">
 						<ul>
-							2 phase (Residential)
+							<li>Electrical Panel Upgrades & Installations
+
+								3 phase (Commercial/Industrial)
+								2 phase (Residential)</li>
+							<li>Outlet/Switch Installation/Replacement</li>
+							<li>Complete Rewiring</li>
+							<li>Electrical Troubleshooting & Repair</li>
+							<li>Interior Lighting/Ceiling Fan Installations</li>
+							<li>Exterior & Security Lighting Installation/Replacements</li>
+							<li>LED Lighting Upgrades</li>
+							<li>Electrical Demolition</li>
+							<li>Load Center Maintenance/ Repair</li>
+							<li>Transformer Installation</li>
+							<li>Electrical Timers/Photocell Installation</li>
+							<li>Appliance Installation</li>
 						</ul>
-					</li>
-					<li>Outlet/Switch Installation/Replacement</li>
-					<li>Complete Rewiring</li>
-					<li>Electrical Troubleshooting & Repair</li>
-					<li>
-						Interior Lighting/Ceiling Fan Installations
-					</li>
-					<li>
-						Exterior & Security Lighting
-						Installation/Replacements
-					</li>
-				</ul>
-				<ul class="multi-column-container--items">
-					<li>LED Lighting Upgrades</li>
-					<li>Electrical Demolition</li>
-					<li>Load Center Maintenance/ Repair</li>
-					<li>Transformer Installation</li>
-					<li>Electrical Timers/Photocell Installation</li>
-					<li>Appliance Installation</li>
-				</ul>
+					</div>
+
+				</div>
+				<div class="card__side card__side--bottom card__side--bottom-3">
+					<div class="card__cta">
+						<a href="#popup" class="btn btn--white">About</a>
+					</div>
+				</div>
 			</div>
 		</div>
+		</section>
+		<!-- Page content -->
+		<!--
+			
+			
+			
+			<div class="commercial-contruction-container">
+				<img
+				src="img/McFarland-Night-View.jpg"
+					alt="Commercial-image"
+					class="commercial-contruction-img"
+				/>
+				<section class="commercial-contruction--main">
+					<div class="image__section">
+						image
+						<img
+							src="
+						"
+							alt=""
+						/>
+						<img src="" alt="" />
+						<img src="" alt="" />
+					</div>
+					<h2 class="multi-item--header">
+						<strong>Commercial Remodeling Specialist</strong>
+						<br />
+						<strong>Serving OC for over 20 years</strong>
+					</h2>
+					<div class="list">
+						<ul class="multi-column-container--items__left">
+							<li>
+								<i class="fas fa-check"></i>Restroom
+								remodeling, upgrades & additions
+							</li>
+							<li>
+								<i class="fas fa-check"></i>Interior &
+								Exterior Painting
+							</li>
+							<li>
+								<i class="fas fa-check"></i>Interior &
+								Exterior Lighting & Electrical
+							</li>
+							<li>
+								<i class="fas fa-check"></i>Framing &
+								Drywall
+							</li>
+						</ul>
+						<ul class="multi-column-container--items__right">
+							<li>
+								<i class="fas fa-check"></i>Demolition
+							</li>
+							<li>
+								<i class="fas fa-check"></i>Move In/Out
+								Renovations
+							</li>
+							<li>
+								<i class="fas fa-check"></i>Tenant
+								Improvements
+							</li>
+							<li>
+								<i class="fas fa-check"></i>Office
+								Additions
+							</li>
+							<li>
+								<i class="fas fa-check"></i>Flooring
+								Installation
+							</li>
+						</ul>
+					</div>
+				</section>
+			</div>
+			
+			<div class="container-services" id="services">
+				<div class="multi-column-container">
+					<section>
+						<h2 class="multi-item--header">
+							<strong
+								>Residential Construction Services</strong
+							>
+						</h2>
+						<ul class="multi-column-container--items">
+							<li>Whole Home Remodels</li>
+							<li>Bathroom/Kitchen Remodel or Upgrade</li>
+							<li>Stucco Repair</li>
+							<li>Exterior Gates/Fencing</li>
+	
+							<li>Flooring Installation</li>
+							<li>Countertop/Tile Installation</li>
+							<li>Demolition</li>
+							<li>Interior & Exterior Painting</li>
+						</ul>
+					</section>
+				</div>
+	
+				<div class="multi-column-container">
+					<section>
+						<h2 class="multi-item--header">
+							<strong
+								>Commercial & Residential Electrical
+								Services</strong
+							>
+						</h2>
+						<ul class="multi-column-container--items">
+							<li>
+								Electrical Panel Upgrades & Installations
+								<ul>
+									3 phase (Commercial/Industrial)
+								</ul>
+								<ul>
+									2 phase (Residential)
+								</ul>
+							</li>
+							<li>
+								Outlet/Switch Installation/Replacement
+							</li>
+							<li>Complete Rewiring</li>
+							<li>Electrical Troubleshooting & Repair</li>
+							<li>
+								Interior Lighting/Ceiling Fan
+								Installations
+							</li>
+							<li>
+								Exterior & Security Lighting
+								Installation/Replacements
+							</li>
+						</ul>
+						<ul class="multi-column-container--items">
+							<li>LED Lighting Upgrades</li>
+							<li>Electrical Demolition</li>
+							<li>Load Center Maintenance/ Repair</li>
+							<li>Transformer Installation</li>
+							<li>
+								Electrical Timers/Photocell Installation
+							</li>
+							<li>Appliance Installation</li>
+						</ul>
+					</section>
+				</div>
+			</div>
+		-->
 
-		<div class="container-projects">
-			<!-- Project Section -->
-			<div class="container-content--projects" id="projects">
+		<!-- Gallery -->
+		<!-- <div class="main-gallery">
+			<div class="gallery-image--container">GALLERY</div>
+		</div> -->
+
+		<!-- projects -->
+		<!-- <div class="container-projects"> -->
+		<!-- Project Section -->
+		<!-- <div class="container-content--projects" id="projects">
 				<h3 class="container-content--projects--header">
 					Projects
 				</h3>
 			</div>
-
-			<div class="w3-row-padding">
-				<div class="w3-col l3 m6 w3-margin-bottom">
-					<div class="w3-display-container">
-						<div
-							class="w3-display-topleft w3-black w3-padding"
-						>
-							Summer House
-						</div>
-						<img
-							src="/w3images/house5.jpg"
-							alt="House"
-							style="width: 100%"
-						/>
-					</div>
-				</div>
-				<div class="w3-col l3 m6 w3-margin-bottom">
-					<div class="w3-display-container">
-						<div
-							class="w3-display-topleft w3-black w3-padding"
-						>
-							Brick House
-						</div>
-						<img
-							src="/w3images/house2.jpg"
-							alt="House"
-							style="width: 100%"
-						/>
-					</div>
-				</div>
-				<div class="w3-col l3 m6 w3-margin-bottom">
-					<div class="w3-display-container">
-						<div
-							class="w3-display-topleft w3-black w3-padding"
-						>
-							Renovated
-						</div>
-						<img
-							src="/w3images/house3.jpg"
-							alt="House"
-							style="width: 100%"
-						/>
-					</div>
-				</div>
-				<div class="w3-col l3 m6 w3-margin-bottom">
-					<div class="w3-display-container">
-						<div
-							class="w3-display-topleft w3-black w3-padding"
-						>
-							Barn House
-						</div>
-						<img
-							src="/w3images/house4.jpg"
-							alt="House"
-							style="width: 100%"
-						/>
-					</div>
-				</div>
-			</div>
-
-			<div class="w3-row-padding">
-				<div class="w3-col l3 m6 w3-margin-bottom">
-					<div class="w3-display-container">
-						<div
-							class="w3-display-topleft w3-black w3-padding"
-						>
-							Summer House
-						</div>
-						<img
-							src="/w3images/house2.jpg"
-							alt="House"
-							style="width: 99%"
-						/>
-					</div>
-				</div>
-				<div class="w3-col l3 m6 w3-margin-bottom">
-					<div class="w3-display-container">
-						<div
-							class="w3-display-topleft w3-black w3-padding"
-						>
-							Brick House
-						</div>
-						<img
-							src="/w3images/house5.jpg"
-							alt="House"
-							style="width: 99%"
-						/>
-					</div>
-				</div>
-				<div class="w3-col l3 m6 w3-margin-bottom">
-					<div class="w3-display-container">
-						<div
-							class="w3-display-topleft w3-black w3-padding"
-						>
-							Renovated
-						</div>
-						<img
-							src="/w3images/house4.jpg"
-							alt="House"
-							style="width: 99%"
-						/>
-					</div>
-				</div>
-				<div class="w3-col l3 m6 w3-margin-bottom">
-					<div class="w3-display-container">
-						<div
-							class="w3-display-topleft w3-black w3-padding"
-						>
-							Barn House
-						</div>
-						<img
-							src="/w3images/house3.jpg"
-							alt="House"
-							style="width: 99%"
-						/>
-					</div>
-				</div>
-			</div>
-		</div>
+		</div> -->
 		<!--	About Section -->
-		<div class="container-about" id="about">
+		<!-- <div class="container-about" id="about">
 			<h3
 				class="w3-border-bottom w3-border-light-grey w3-padding-16"
 			>
@@ -290,138 +352,11 @@
 				loyalty to our customers. Contractors<br />
 				<strong>License # 1002460</strong>
 			</p>
-		</div>
-
-		<div class="container-contact">
-			<div class="w3-col l3 m6 w3-margin-bottom">
-				<img
-					src="/w3images/team2.jpg"
-					alt="John"
-					style="width: 100%"
-				/>
-				<h3>John Doe</h3>
-				<p class="w3-opacity">CEO & Founder</p>
-				<p>
-					Phasellus eget enim eu lectus faucibus vestibulum.
-					Suspendisse sodales pellentesque elementum.
-				</p>
-				<p>
-					<button class="w3-button w3-light-grey w3-block">
-						Contact
-					</button>
-				</p>
-			</div>
-			<div class="w3-col l3 m6 w3-margin-bottom">
-				<img
-					src="/w3images/team1.jpg"
-					alt="Jane"
-					style="width: 100%"
-				/>
-				<h3>Jane Doe</h3>
-				<p class="w3-opacity">Architect</p>
-				<p>
-					Phasellus eget enim eu lectus faucibus vestibulum.
-					Suspendisse sodales pellentesque elementum.
-				</p>
-				<p>
-					<button class="w3-button w3-light-grey w3-block">
-						Contact
-					</button>
-				</p>
-			</div>
-			<div class="w3-col l3 m6 w3-margin-bottom">
-				<img
-					src="/w3images/team3.jpg"
-					alt="Mike"
-					style="width: 100%"
-				/>
-				<h3>Mike Ross</h3>
-				<p class="w3-opacity">Architect</p>
-				<p>
-					Phasellus eget enim eu lectus faucibus vestibulum.
-					Suspendisse sodales pellentesque elementum.
-				</p>
-				<p>
-					<button class="w3-button w3-light-grey w3-block">
-						Contact
-					</button>
-				</p>
-			</div>
-			<div class="w3-col l3 m6 w3-margin-bottom">
-				<img
-					src="/w3images/team4.jpg"
-					alt="Dan"
-					style="width: 100%"
-				/>
-				<h3>Dan Star</h3>
-				<p class="w3-opacity">Architect</p>
-				<p>
-					Phasellus eget enim eu lectus faucibus vestibulum.
-					Suspendisse sodales pellentesque elementum.
-				</p>
-				<p>
-					<button class="w3-button w3-light-grey w3-block">
-						Contact
-					</button>
-				</p>
-			</div>
-		</div>
+		</div> -->
 
 		<!-- Contact Section -->
-		<div class="w3-container w3-padding-32" id="contact">
-			<h3
-				class="w3-border-bottom w3-border-light-grey w3-padding-16"
-			>
-				Contact
-			</h3>
-			<p>Lets get in touch and talk about your next project.</p>
-			<form action="/action_page.php" target="_blank">
-				<input
-					class="w3-input w3-border"
-					type="text"
-					placeholder="Name"
-					required
-					name="Name"
-				/>
-				<input
-					class="w3-input w3-section w3-border"
-					type="text"
-					placeholder="Email"
-					required
-					name="Email"
-				/>
-				<input
-					class="w3-input w3-section w3-border"
-					type="text"
-					placeholder="Subject"
-					required
-					name="Subject"
-				/>
-				<input
-					class="w3-input w3-section w3-border"
-					type="text"
-					placeholder="Comment"
-					required
-					name="Comment"
-				/>
-				<button
-					class="w3-button w3-black w3-section"
-					type="submit"
-				>
-					<i class="fa fa-paper-plane"></i> SEND MESSAGE
-				</button>
-			</form>
-		</div>
 
 		<!-- Image of location/map -->
-		<div class="w3-container">
-			<img
-				src="/w3images/map.jpg"
-				class="w3-image"
-				style="width: 100%"
-			/>
-		</div>
-
 		<!-- End page content -->
 
 		<!-- Footer -->
