--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
 
 		<!-- type writer effect -->
 		<div class="typewriter__container">
-			<h1 class="typewriter--header1">J & M 
-				<span class="txt-type" data-wait="3000" data-words='["General Contractors", "Great Service"]'></span>
+			<h1 class="typewriter--header1">J & M Great
+				<span class="txt-type" data-wait="3000" data-words='["Contractors", "Services", "Staff"]'></span>
 			</h1>
 			<h2 class="typewirter--header2">Contact Us For a Quote</h2>
-			<button class="typewriter--button button">Contact Us</button>
+			<!-- <button class="typewriter--button button">Contact Us</button> -->
 		</div>
 
 		<!-- header slides -->
@@ -115,8 +115,10 @@
 		
 		<!-- Service cards -->
 
-		<div class="service__header" id="services">
-			<h2>Services</h2>
+		<div class="service__header header__style" id="services">
+			<!-- intersection observer -->
+			<h2 class="title">Services</h2>
+			<!-- intersection observer end-->
 		</div>
 		<section class="card-container">
 			<div class="card">
@@ -153,7 +155,6 @@
 				</div>
 
 				<!-- Seconds card -->
-				<div class="card">
 					<div class="card__side card__side--front">
 						<div class="card__picture card__picture--2">
 							&nbsp;
@@ -193,10 +194,8 @@
 							</div>
 						</div> -->
 					</div>
-				</div>
 
 				<!-- 3rd card -->
-				<div class="card">
 					<div class="card__side card__side--upper">
 						<div class="card__picture card__picture--3">
 							&nbsp;
@@ -256,13 +255,12 @@
 							>
 						</div>
 					</div>
-				</div>
 			</div>
 		</section>
 		
 		<!-- Gallery -->     
-		<div class="gallery__header" id="gallery">
-			<h2 class="gallery__header--title">
+		<div class="gallery__header header__style" id="gallery">
+			<h2 class="title">
 				Gallery
 			</h2>
 		</div>   
@@ -293,7 +291,7 @@
 		<span class="close">&times;</span>
 		<img class="modal-content" id="img01">
 		<div id="caption"></div>
-		<div class="left">h</div>
+		<!-- <div class="left">h</div> -->
 	</div>
 
 		<!-- projects -->
@@ -307,26 +305,54 @@
 		</div> -->
 
 		<!-- Contact -->
-		<div class="contact__header" id="contact">
-			<h2>Contact</h2>
+		<div class="contact__header header__style" id="contact">
+			<!-- intersection observer -->
+			<h2 class="title">Contact</h2>
+			<!-- intersection observer end -->
 		</div>
 		<section class="contact__container">
-			<div class="contact__container--wrapper">
+			<div class="contact__container--img">
 
+				<div class="contact--wrapper">
+					<form action="#" method="get" class="form">
+						<div class="form__group">
+						<input class="form__input" type="text" name="name" id="name" placeholder="Name" required>
+						<label class="form__label" for="name">Name </label>
+					</div>
+					<div class="form__group">
+						<input type="email" class="form__input" placeholder="Email address" id="email" required>
+						<label for="email" class="form__label">Email address</label>
+					</div>
+					<textarea name="comment" id="comments" cols="30" rows="10" placeholder="Comment"></textarea>
+					<div class="form__group">
+						<button class="form__button">
+							Submit
+						</div>
+					</form>
+					
+					<!-- <section class="contact__info">
+						Phone Number: 
+						<br>949-259-4848
+					</section> -->
+				</div>
 			</div>
 		</section>
 
 		<!-- Testimonial -->
-		<div class="testimonial__header" id="testimonial">
-			<h2>Testimonial</h2>
+		<div class="testimonial__header header__style" id="testimonial">
+			<!-- intersection observer -->
+			<h2 class="title">Testimonial</h2>
+			<!-- intersection observer end -->
 		</div>
 		<section class="testimonial__container">
 			<div class="testimonial__container--wrapper"></div>
 		</section>
 
 		<!--	About us Section -->
-		<div class="about__header" id="about">
-			<h2>About Us</h2>
+		<div class="about__header header__style" id="about">
+			<!-- intersection observer -->
+			<h2 class="title">About Us</h2>
+			<!-- intersection observer end -->
 		</div>
 		<section class="about__container">
 			<div class="about__container--wrapper">
@@ -382,6 +408,7 @@
 		<script src="src/scripts.js"></script>
 		<script src="src/slider.js"></script>
 		<script src="src/typewriter.js"></script>
+		<script src="src/intersectionObservers/titleObserver.js"></script>
 
 	</body>
 </html>
