added var in .dotenv and .gitignore

--- a/public/index.html
+++ b/public/index.html
@@ -446,7 +446,7 @@
 					
 					details about your project.
 				</p>
-				<form class="form" action="/" method="POST">
+				<form class="form" action="/contact" method="POST">
 					<div class="form__group">
 						<input class="form__input" type="text" name="name" id="name" placeholder="Name" required>
 						<label class="form__label" for="name">Name </label>
@@ -490,10 +490,10 @@
 		<!-- End of Footer -->
 
 		<!-- Scripts -->
-		<script src="/src/scripts.js"></script>
-		<script src="/src/slider.js"></script>
-		<script src="/src/intersectionObservers/titleObserver.js"></script>
-		<script src="/src/intersectionObservers/navObserver.js"></script>
+		<script async src="/src/scripts.js"></script>
+		<script async src="/src/slider.js"></script>
+		<script async src="/src/intersectionObservers/titleObserver.js"></script>
+		<script async src="/src/intersectionObservers/navObserver.js"></script>
 		<!-- End of Scripts -->
 
 	</body>
