--- a/public/index.html
+++ b/public/index.html
@@ -250,7 +250,7 @@
 		</div>   
 		<div class="gallery__wrapper">
 
-			<section class="gallery">
+			<!-- <section class="gallery">
 				<figure class="gallery__item gallery__item--1"><img src="img/gal-1.jpeg" alt="Gallery image 1" class="gallery__img"></figure>
 				<figure class="gallery__item gallery__item--2"><img src="img/gal-2.jpeg" alt="Gallery image 2" class="gallery__img"></figure>
 				<figure class="gallery__item gallery__item--3"><img src="img/gal-3.jpeg" alt="Gallery image 3" class="gallery__img"></figure>
@@ -265,8 +265,22 @@
 				<figure class="gallery__item gallery__item--12"><img src="img/gal-12.jpeg" alt="Gallery image 12" class="gallery__img"></figure>
 				<figure class="gallery__item gallery__item--13"><img src="img/gal-13.jpeg" alt="Gallery image 13" class="gallery__img"></figure>
 				<figure class="gallery__item gallery__item--14"><img src="img/gal-14.jpeg" alt="Gallery image 14" class="gallery__img"></figure>
-	
-	
+			</section> -->
+			<section class="gallery">
+				<figure class="gallery__item gallery__item--1"><img src="img/images/BathroomRem.jpeg" alt="Gallery image 1" class="gallery__img"></figure>
+				<figure class="gallery__item gallery__item--2"><img src="img/images/ResidentialConcreteSidewalk3Final.jpg" alt="Gallery image 2" class="gallery__img"></figure>
+				<figure class="gallery__item gallery__item--3"><img src="img/gal-3.jpeg" alt="Gallery image 3" class="gallery__img"></figure>
+				<figure class="gallery__item gallery__item--4"><img src="img/gal-4.jpeg" alt="Gallery image 4" class="gallery__img"></figure>
+				<figure class="gallery__item gallery__item--5"><img src="img/images/LightsRoof_optimized.jpg" alt="Gallery image 5" class="gallery__img"></figure>
+				<figure class="gallery__item gallery__item--6"><img src="img/gal-6.jpeg" alt="Gallery image 6" class="gallery__img"></figure>
+				<figure class="gallery__item gallery__item--7"><img src="img/gal-7.jpeg" alt="Gallery image 7" class="gallery__img"></figure>
+				<figure class="gallery__item gallery__item--8"><img src="img/images/Resized-img.jpg" alt="Gallery image 8" class="gallery__img"></figure>
+				<figure class="gallery__item gallery__item--9"><img src="img/images/LagunaWoodsBath.jpg" alt="Gallery image 9" class="gallery__img"></figure>
+				<figure class="gallery__item gallery__item--10"><img src="img/gal-10.jpeg" alt="Gallery image 10" class="gallery__img"></figure>
+				<figure class="gallery__item gallery__item--11"><img src="img/gal-11.jpeg" alt="Gallery image 11" class="gallery__img"></figure>
+				<figure class="gallery__item gallery__item--12"><img src="img/gal-12.jpeg" alt="Gallery image 12" class="gallery__img"></figure>
+				<figure class="gallery__item gallery__item--13"><img src="img/images/McFarlandNightView.jpg" alt="Gallery image 13" class="gallery__img"></figure>
+				<figure class="gallery__item gallery__item--14"><img src="img/gal-14.jpeg" alt="Gallery image 14" class="gallery__img"></figure>
 			</section>
 		</div>
 
@@ -440,7 +454,7 @@
 						<input type="email" name="email" class="form__input" placeholder="Email address" id="email" required>
 						<label for="email" class="form__label">Email address</label>
 					</div>
-					<textarea name="comment" id="comments" autocomplete="off" cols="30" rows="10" placeholder="Comment"></textarea>
+					<textarea name="comment" id="comments" autocomplete="off" cols="30" rows="10" placeholder="Comment Max characters 140" maxlength="140"></textarea>
 					<div class="form__group">
 						<button class="form__button">
 							Submit
